# scholar_classifier

./: README.md  pyproject.toml
src/classification/: classifier.py
