[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholar classifier"
version = "1.0.0"
authors = [
  { name="Taige Zhang", email="taigezhang@hotmail.com" },
]
description = "A classifier targeted at scholarly infos"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""